Fix link in dark mode

--- a/style.scss
+++ b/style.scss
@@ -225,7 +225,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkerGray;
+    color: $white;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
